# PetalFlow

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: tests.yml
include/: activation.h  bit_array.h  dropout.h  errors.h  flower.h  labeling.h  logger.h  loss.h  metrics.h  optimizers.h  petal.h  random.h  shuffle.h  weights.h
src/: activation.c  backward.c  bit_array.c  dropout.c  errors.c  flower.c  forward.c  labeling.c  logger.c  loss.c  metrics.c  petal.c  random.c  shuffle.c  weights.c
test/: main.c
